# send-to-goodnotes

./: Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: dk39ixa50xzlci9b1dgyf0a4ihj4f5gc-source
src/: config.rs  email.rs  main.rs
src/app/: messages.rs  mod.rs  state.rs  view.rs
src/app/widgets/: mod.rs  outside_commit.rs
