[package]
name = "send-to-goodnotes"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["wgpu", "tokio", "advanced"] }
lettre = "0.11.18"
rfd = "0.15.4"
thiserror = "2.0.14"
dotenvy = "0.15"
dotenvy_macro = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
dirs = "6.0.0"
whoami = "1.6.1"
